@@ -309,12 +309,12 @@
    `(makefile-space ((t (:background ,bgpink))))
 
    ;;; Markdown
-   `(markdown-header-face-1 ((t (:inherit org-level-1))))
-   `(markdown-header-face-2 ((t (:inherit org-level-2))))
-   `(markdown-header-face-3 ((t (:inherit org-level-3))))
-   `(markdown-header-face-4 ((t (:inherit org-level-4))))
-   `(markdown-header-face-5 ((t (:inherit org-level-5))))
-   `(markdown-header-face-6 ((t (:inherit org-level-6))))
+   `(markdown-header-face-1 ((t (:foreground ,fggreen :inherit unspecified))))
+   `(markdown-header-face-2 ((t (:foreground ,fgcyan :inherit unspecified))))
+   `(markdown-header-face-3 ((t (:foreground ,fgred :inherit unspecified))))
+   `(markdown-header-face-4 ((t (:foreground ,fgblue :inherit unspecified))))
+   `(markdown-header-face-5 ((t (:foreground ,fgyellow :inherit unspecified))))
+   `(markdown-header-face-6 ((t (:foreground ,fgpurple :inherit unspecified))))
 
    ;;; Message mode
    `(message-header-cc ((t (:foreground ,fgdim))))
